--- a/index.html
+++ b/index.html
@@ -155,6 +155,64 @@
         </div>
     </section>
 
+    <section>
+        <section id="story" class="story">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-8 col-10 text-center">
+                        <span>Bagaimana kami bertemu</span>
+                        <h2>Cerita Kami</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi laboriosam id tempora iure perspiciatis! Eum!</p>
+
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <ul class="timeline">
+                            <li>
+                                <div class="timeline-image" style="background-image: url(img/bertemu.jpg);"></div>
+                                <div class="timeline-panel">
+                                    <div class="timeline-heading">
+                                        <h3>Pertama Bertemu</h3>
+                                        <span>1 Juni 2000</span>
+                                    </div>
+                                    <div class="timeline-body">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptates sit harum! Animi, quis aliquam?</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="timeline-inverted">
+                                <div class="timeline-image" style="background-image: url(img/serius.jpg);"></div>
+                                <div class="timeline-panel">
+                                    <div class="timeline-heading">
+                                        <h3>Mulai Serius</h3>
+                                        <span>1 Januari 2005</span>
+                                    </div>
+                                    <div class="timeline-body">
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda distinctio hic soluta corrupti possimus quidem minus culpa ipsum?</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="timeline-image" style="background-image: url(img/tunangan.jpg);"></div>
+                                <div class="timeline-panel">
+                                    <div class="timeline-heading">
+                                        <h3>Tunangan</h3>
+                                        <span>1 November 2005</span>
+                                    </div>
+                                    <div class="timeline-body">
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim repellendus vel obcaecati laborum explicabo possimus, aliquid non sed rerum nam!</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
     <script>
@@ -181,6 +239,19 @@
                     plural: 'detik'
                 }
             },
+        });
+    </script>
+
+    <script>
+        const stickyTop = document.querySelector('.sticky-top');
+        const offcanvas = document.querySelector('.offcanvas');
+
+        offcanvas.addEventListener('show.bs.offcanvas', function() {
+            stickyTop.style.overflow = 'visible';
+        });
+
+        offcanvas.addEventListener('hidden.bs.offcanvas', function() {
+            stickyTop.style.overflow = 'hidden';
         });
     </script>
 </body>
